fixed overflow scrollbar appearing at all times even when there's no overflow

--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ body{
     text-align: end;
     padding-right: 5px;
     white-space: nowrap;
-    overflow: hidden;
-    overflow: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 button{
